hphp/hack/test/typecheck/nameof/unstable_feature.php.exp
File "unstable_feature.php", line 11, characters 12-13:
`nameof` can only be used with a class (Parsing[1002])
